--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build-prod": "webpack --mode production",
     "lint": "eslint './src/**/*.{ts,tsx}' --fix",
     "format": "prettier --write './src/**/*.{ts,tsx,scss,html}'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "firebase:deploy": "firebase deploy",
+    "firebase:serve": "firebase serve"
   },
   "keywords": [],
   "author": "",
