--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "dependencies": {
     "css-loader": "^7.1.2",
+    "inputmask": "^5.0.9",
     "sass": "^1.83.4",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
@@ -28,6 +29,7 @@
     "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
+    "@types/inputmask": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "clean-webpack-plugin": "^4.0.0",
